Сделал авторизацию в тг боте

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 BOT_TOKEN=<token from BotFather>
 ADMIN_IDS=<telegram ID(s)>
 
-API_ID=<from my.telegram.org>
-API_HASH=<from my.telegram.org>
+TG_APP_API_ID=<from my.telegram.org>
+TG_APP_API_HASH=<from my.telegram.org>
 
 DATABASE=<someDatabaseName>
 DB_HOST=<127.0.0.1>
