Починить сохранение telegram сессии

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,6 @@ DATABASE=<someDatabaseName>
 DB_HOST=<127.0.0.1>
 DB_USER=<dbUser>
 DB_PASSWORD=<dbPassword>
+
+OPENAI_API_KEY=<sk-...>
+OPENAI_BASE_URL=<Example: https://api.openai.com/v1>
