--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,10 @@ pydantic~=2.10.6
 pytz~=2025.2
 numpy~=2.1.3
 colorama~=0.4.6
-torch~=2.7.0+cu118
+torch~=2.7.0
 SQLAlchemy~=2.0.40
 alembic~=1.15.2
 psycopg2-binary~=2.9.10
 openai~=1.78.1
+fastapi>=0.68.0
+uvicorn>=0.15.0
